# MOBaiLE

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_INTENT.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  MEMORY.md  NEW_FEATURES.md  README.md  SECURITY.md  STATUS.md  TRADEMARKS.md  package.json
backend/: .env.example  AGENT_CONTEXT.md  README.md  pyproject.toml  run_backend.sh
backend/agent_skills/: README.md
backend/app/: README.md  agent_process_monitor.py  agent_run_finalizer.py  agent_run_service.py  agent_runtime.py  agent_stream_handler.py  calendar_service.py  capabilities.py  capability_probes.py  chat_attachments.py  chat_envelope.py  chat_envelope_manifest.py  claude_text.py  cloud_paths.py  codex_text.py  credential_request_service.py  execution_service.py  host_tools.py  main.py  onboarding_events.py  pairing_service.py  pairing_state.py  pairing_url.py  pairing_url_policy.py  phone_access_mode.py  profile_store.py  run_state.py  runtime_environment.py  runtime_environment_loader.py  runtime_executor_catalog.py  runtime_session_service.py  runtime_settings_catalog.py  session_context_service.py  session_runtime_state.py  setup_readiness.py  shell_command_policy.py  upload_limits.py  utterance_service.py  workspace_service.py
backend/data/: README.md
backend/tests/: api_test_support.py  conftest.py  test_agent_process_monitor.py  test_agent_run_finalizer.py  test_agent_run_service.py  test_agent_stream_handler.py  test_api.py  test_api_agent_executors.py  test_api_credential_requests.py  test_api_pairing.py  (+32 more)
(+162 files in other folders)
